<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/material_dynamic_neutral_variant0"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView_DMAS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/dmas"
                android:textColor="#ffffff"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView_DMAS_Subline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/basic_arithmetic_operations"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_result"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/result"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/textview_box1"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="00"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="viewEnd"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/textview_box2"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:hint="00"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textAlignment="viewEnd"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/div"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/div"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/mul"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:text="@string/mul"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/add"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:text="@string/add"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/sub"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:text="@string/sub"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Button
            android:id="@+id/clearbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/clear"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:text="@string/designed_by_mackdev_in_india"
            android:textAlignment="center"
            android:textColor="#838080"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>